# jukebox-django

./: .envrc  .gitignore  README.md  flake.nix  manage.py  pyproject.toml  shell.nix
config/: asgi.py  settings.py  urls.py
jukebox/: consumers.py  controller.py  lyrics.py  song.py  urls.py  views.py
jukebox/YTUSRN/: apps.py  models.py  urls.py  views.py
jukebox/YTUSRN/migrations/: 0001_initial.py
jukebox/YTUSRN/static/YTUSRN/: script.js  style.css
jukebox/YTUSRN/templates/jukebox/: THANKYOU.html  dashboard.html  index.html  ytflp.html
jukebox/api/: urls.py  views.py
jukebox/backend/: config.py  lyrics.py  main.py  runner.py
jukebox/jukebox/: asgi.py  settings.py  urls.py  wsgi.py
jukebox/jukebox/backend/: controller.py  host.py  runner.py
jukebox/static/: colors.css  script.js  style.css
jukebox/templates/: dashboard.html
jukebox/types/: __init__.py  lyrics.py  song.py  state.py  time.py
music/: music_cache.json
src/config/: settings.py
src/jukebox/: consumers.py  lyrics.py  routing.py
