[tool.poetry]
name = "jukebox-django"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10,<3.13"
django = "^5.1.1"
yt-dlp = "^2024.9.27"
jsonpickle = "^3.3.0"
wheel = "^0.44.0"
pyaudio = "^0.2.14"
websockets = "^13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
