[project]
name = "jukebox-django"
version = "0.1.0"
description = "OCF Jukebox Django Rewrite"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "django-icons (>=26.1,<27.0)",
    "daphne (>=4.2.1,<5.0.0)",
    "channels (>=4.3.2,<5.0.0)",
    "just-playback (>=0.1.8,<0.2.0)",
    "yt-dlp (>=2026.2.4,<2027.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "editables>=0.5",
    "whitenoise[brotli]>=6.9.0",
]

[tool.uv]
package = true

[tool.setuptools]
packages = ["config", "jukebox"]
